--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".EditorActivity"></activity>
+
+        <provider
+            android:name=".data.PetProvider"
+            android:authorities="com.example.nouman.pets"
+            android:exported="false" />
     </application>
 
 </manifest>
